# bitlbee-discord

./: .gitignore  Makefile  Makefile.am  README  README.md  autogen.sh  configure.ac  discord.c
contrib/docker/: Dockerfile  bitlbee.conf
doc/: Makefile.am  discord-help.txt
src/: Makefile.am  discord-handlers.c  discord-handlers.h  discord-help.txt  discord-http.c  discord-http.h  discord-util.c  discord-util.h  discord-websockets.c  discord-websockets.h  discord.c  discord.h
